# perquire

./: .gitignore  DEMONSTRATION_SUMMARY.md  DONE.md  DONE_archive_previous.md  LICENSE  LIVE_E2E_TEST_REPORT.md  PERQUIRE_DEMO_SUMMARY.md  PERQUIRE_UPGRADE_COMPLETE.md  README.md  TEST_CONFIGURATION.md  TODO.md  UPGRADE_SUMMARY.md  benchmark.py  create_real_embedding.py  create_test_embeddings.py  demo_upgrade.py  investigation_output.txt  live_e2e_test.py  perquire-demo-auto.py  perquire-demo.py  pyproject.toml  real_demo.py  run_live_e2e.sh  simple_benchmark_results.json  test_cli_structure.py  test_e2e.py
.claude/: settings.local.json
.github/workflows/: e2e-tests.yml  python-ci.yml  release.yml
archive/: DONE_archive_previous.md
benchmarks/: README.md  benchmark.py  simple_benchmark.py
docs/: DEPRECATION_NOTICE.md  PYDANTIC_AI_FIX.md  PYDANTIC_AI_IMPROVEMENTS.md  PYDANTIC_AI_MIGRATION.md  PYDANTIC_AI_QUICKSTART.md  akinator_system_plan.md  comparison.md  plan.md  rl.md
docs/post-v1-backlog/web/: __init__.py
docs/post-v1-backlog/web/templates/: batch.html
docs/reports/: LIVE_E2E_TEST_REPORT.md  README.md  TEST_CONFIGURATION.md
examples/: README.md  pydantic_ai_demo.py  pydantic_ai_integration_demo.py  run_live_e2e.sh
src/perquire/: __init__.py  exceptions.py
src/perquire/akinator/: __init__.py  investigation.py  knowledge_base.py  question_bank.py
src/perquire/cache/: __init__.py
src/perquire/cli/: __init__.py  commands.py  demo.py  lean_main.py  main.py
src/perquire/convergence/: __init__.py  algorithms.py  statistical_methods.py
src/perquire/core/: __init__.py  ensemble.py  investigator.py  result.py  strategy.py
src/perquire/database/: __init__.py  base.py  duckdb_provider.py  models.py
src/perquire/embeddings/: __init__.py  base.py  gemini_embeddings.py  openai_embeddings.py  utils.py
src/perquire/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  models.py  ollama_provider.py  openai_provider.py  pydantic_ai_provider.py
src/perquire/providers/: __init__.py  gemini_provider.py  openai_provider.py
src/perquire/web/: __init__.py  app.py  main.py
src/perquire/web/templates/: base.html  batch.html  index.html  status.html
test_embeddings/: coding_satisfaction.json  coffee_shop.json  nostalgia.json  nostalgia_real.json  nostalgia_real.npy  presentation.json  redwood_forest.json
tests/akinator/: test_akinator.py
tests/cli/: test_cli.py
tests/convergence/: test_algorithms.py
tests/core/: test_investigator.py
tests/database/: test_duckdb_provider.py
tests/e2e/: run_e2e_tests.py
tests/e2e_data/source_texts/: sample1.txt
tests/providers/: test_provider_integration.py
tools/: README.md
