[project]
name = "perquire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.55.0",
    "click>=8.2.1",
    "duckdb>=1.3.1",
    "fastapi>=0.115.14",
    "google-generativeai>=0.8.5",
    "hypothesis>=6.135.20",
    "jinja2>=3.1.6",
    "llama-index>=0.12.45",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-anthropic>=0.7.5",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-openai>=0.4.7",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",

    "uvicorn[standard]>=0.35.0",
]
