[project]
name = "perquire-test"
version = "0.1.0"
description = "Live E2E test for Perquire embedding investigation"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.56.0",
    "click>=8.2.1",
    "duckdb>=1.3.1",
    "google-generativeai>=0.8.5",
    "llama-index-core>=0.12.45",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-anthropic>=0.7.5",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai>=0.4.7",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0", # Includes python-multipart, websockets, etc.
    "Jinja2>=3.1.0",
]

[project.scripts]
perquire = "perquire.cli.main:cli"
