[project]
name = "perquire"
version = "0.2.0"
description = "AI system that investigates unknown embeddings through systematic questioning"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["ai", "embeddings", "llm", "investigation", "pydantic", "vector-search"]
authors = [
    {name = "Franklin Baldo", email = "franklinbaldo@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.56.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
    "duckdb>=1.3.0",
    "duckdb-extension-vss>=1.3.0",
    "google-generativeai>=0.8.5",
    "llama-index-core>=0.12.45",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-anthropic>=0.7.5",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai>=0.4.7",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pydantic-ai>=0.0.14",
    "scikit-learn>=1.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0", # Includes python-multipart, websockets, etc.
    "Jinja2>=3.1.0",
]

[project.scripts]
perquire = "perquire.cli.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
